generate classification model

--- a/model/data_cleaning.ipynb
+++ b/model/data_cleaning.ipynb
@@ -45,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24caf946010>"
+       "<matplotlib.image.AxesImage at 0x1ba9eda4150>"
       ]
      },
      "execution_count": 3,
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24cafaad190>"
+       "<matplotlib.image.AxesImage at 0x1ba9ee168d0>"
       ]
      },
      "execution_count": 6,
@@ -273,7 +273,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24cafaf4ad0>"
+       "<matplotlib.image.AxesImage at 0x1ba9ee9e8d0>"
       ]
      },
      "execution_count": 10,
@@ -337,7 +337,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24cb6e79d90>"
+       "<matplotlib.image.AxesImage at 0x1baa6269010>"
       ]
      },
      "execution_count": 12,
@@ -388,7 +388,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24cafbe7b90>"
+       "<matplotlib.image.AxesImage at 0x1ba9efc4290>"
       ]
      },
      "execution_count": 14,
@@ -420,7 +420,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24cb6f15190>"
+       "<matplotlib.image.AxesImage at 0x1baa62be8d0>"
       ]
      },
      "execution_count": 15,
@@ -452,7 +452,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24cb6f80050>"
+       "<matplotlib.image.AxesImage at 0x1baa6344150>"
       ]
      },
      "execution_count": 16,
@@ -484,7 +484,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24cb70218d0>"
+       "<matplotlib.image.AxesImage at 0x1baa63c0050>"
       ]
      },
      "execution_count": 17,
@@ -672,38 +672,64 @@
    ],
    "source": [
     "cropped_image_dirs = []\n",
-    "celebrity_file_names_dict = {}\n",
+    "player_file_names_dict = {}\n",
     "\n",
     "for img_dir in img_dirs:\n",
     "    count = 1\n",
-    "    celebrity_name = img_dir.split('/')[-1]\n",
-    "    celebrity_file_names_dict[celebrity_name] = []\n",
-    "    print(celebrity_name)\n",
+    "    player_name = img_dir.split('/')[-1]\n",
+    "    player_file_names_dict[player_name] = []\n",
+    "    print(player_name)\n",
     "    \n",
     "    for entry in os.scandir(img_dir):\n",
     "        roi_color = get_cropped_image_if_2_eyes(entry.path)\n",
     "        if roi_color is not None:\n",
-    "            cropped_folder = path_to_cr_data + celebrity_name\n",
+    "            cropped_folder = path_to_cr_data + player_name\n",
     "            if not os.path.exists(cropped_folder):\n",
     "                os.makedirs(cropped_folder)\n",
     "                cropped_image_dirs.append(cropped_folder)\n",
     "                print(\"Generating cropped images in folder: \",cropped_folder)\n",
     "                \n",
-    "            cropped_file_name = celebrity_name + str(count) + \".png\"\n",
+    "            cropped_file_name = player_name + str(count) + \".png\"\n",
     "            cropped_file_path = cropped_folder + \"/\" + cropped_file_name\n",
     "            \n",
     "            cv2.imwrite(cropped_file_path, roi_color)\n",
-    "            celebrity_file_names_dict[celebrity_name].append(cropped_file_path)\n",
+    "            player_file_names_dict[player_name].append(cropped_file_path)\n",
     "            count += 1  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "78610231-3b20-40a4-bad0-ab50fbc1032d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./dataset/cropped/cristiano ronaldo',\n",
+       " './dataset/cropped/david beckham',\n",
+       " './dataset/cropped/gareth bale',\n",
+       " './dataset/cropped/kylian mbappe',\n",
+       " './dataset/cropped/lionel messi',\n",
+       " './dataset/cropped/luis suarez',\n",
+       " './dataset/cropped/mohamed salah',\n",
+       " './dataset/cropped/neymar jr',\n",
+       " './dataset/cropped/thomas muller',\n",
+       " './dataset/cropped/zlatan ibrahimovic']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cropped_img_dirs = []\n",
+    "for entry in os.scandir(\"./dataset/cropped/\"):\n",
+    "    if entry.is_dir():\n",
+    "        cropped_img_dirs.append(entry.path)\n",
+    "cropped_img_dirs"
+   ]
   }
  ],
  "metadata": {
