--- a/model/soccer_player_classifier_model.ipynb
+++ b/model/soccer_player_classifier_model.ipynb
@@ -2,13 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "143477e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./dataset/cropped/cristiano ronaldo',\n",
+       " './dataset/cropped/david beckham',\n",
+       " './dataset/cropped/gareth bale',\n",
+       " './dataset/cropped/kylian mbappe',\n",
+       " './dataset/cropped/lionel messi',\n",
+       " './dataset/cropped/luis suarez',\n",
+       " './dataset/cropped/mohamed salah',\n",
+       " './dataset/cropped/neymar jr',\n",
+       " './dataset/cropped/thomas muller',\n",
+       " './dataset/cropped/zlatan ibrahimovic']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np\n"
+    "import os\n",
+    "cropped_img_dirs = []\n",
+    "for entry in os.scandir(\"./dataset/cropped/\"):\n",
+    "    if entry.is_dir():\n",
+    "        cropped_img_dirs.append(entry.path)\n",
+    "cropped_img_dirs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ff23e35-3c97-46f0-9c16-1dcac8de9aa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -27,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
